

  21 Oct 2007; kiorky <kiorky@cryptelium.net> ++:
  -m bumped but i keep last version to be sure, waiting for the whole beast to
  be recompiled one time entirely

  13 Jun 2007; kiorky <kiorky@cryptelium.net>
  -plexus-container-default-1.0_alpha14.ebuild:
  cleanup / not used

  13 Jun 2007; kiorky <kiorky@cryptelium.net>
  -plexus-container-default-1.0_alpha9.ebuild,
  -plexus-container-default-1.0_alpha10.ebuild:
  cleanup / not used

  02 Jun 2007; kiorky <kiorky@cryptelium.net>
  plexus-container-default-1.0_alpha9.ebuild,
  plexus-container-default-1.0_alpha10.ebuild,
  plexus-container-default-1.0_alpha14.ebuild,
  plexus-container-default-1.0_alpha24.ebuild:
  moving to JAVA_MAVEN_CLASSPATH

  29 May 2007; kiorky <kiorky@cryptelium.net> ChangeLog:
  Adding maven bootstrap flag

  29 May 2007; kiorky <kiorky@cryptelium.net> ChangeLog:
  Adding maven bootstrap flag

  29 May 2007; kiorky <kiorky@cryptelium.net> ChangeLog:
  Adding maven bootstrap flag

  29 May 2007; kiorky <kiorky@cryptelium.net>
  plexus-container-default-1.0_alpha9.ebuild,
  plexus-container-default-1.0_alpha10.ebuild,
  plexus-container-default-1.0_alpha14.ebuild,
  plexus-container-default-1.0_alpha24.ebuild:
  Adding maven bootstrap flag

  19 May 2007; Alistair John Bush <ali_bush@gentoo.org>
  plexus-container-default-1.0_alpha24.ebuild:
  Adding to ~amd64.

  19 May 2007; Alistair John Bush <ali_bush@gentoo.org>
  plexus-container-default-1.0_alpha9.ebuild:
  Adding to ~amd64 and Restrict tests

  01 May 2007; kiorky <kiorky@cryptelium.net>
  +plexus-container-default-1.0_alpha9.ebuild,
  +plexus-container-default-1.0_alpha10.ebuild,
  -plexus-container-default-1.0.ebuild:
  Adding specific ebuilds beecause of maven wants it

  25 Apr 2007; kiorky <kiorky@cryptelium.net>
  plexus-container-default-1.0.ebuild:
  Removing leading whitespace

  25 Apr 2007; kiorky <kiorky@cryptelium.net>
  plexus-container-default-1.0.ebuild:
  Migrating to new maven eclass
