@@ -11,13 +11,13 @@ DESCRIPTION="The Plexus project provides a full software stack for creating and 
 HOMEPAGE="http://plexus.codehaus.org/"
 SRC_URI="http://dev.gentooexperimental.org/~kiorky/${P}.tar.bz2"
 LICENSE="as-is" # http://plexus.codehaus.org/plexus-utils/license.html
-SLOT="1.0.33"
+SLOT="1.0_alpha33"
 KEYWORDS="~amd64 ~x86"
 IUSE=""
 DEP="
 =dev-java/plexus-classworlds-1.2*
->=dev-java/plexus-utils-1.4.7
->=dev-java/plexus-component-api-1.0.33
+>=dev-java/plexus-utils-1.4.7_pre20071021
+>=dev-java/plexus-component-api-1.0_alpha33_pre20071021
 dev-java/junit
 "
 DEPEND=">=virtual/jdk-1.4 ${DEP}"
@@ -26,6 +26,6 @@ JAVA_MAVEN_CLASSPATH="
 plexus-classworlds
 plexus-utils-1.4.7
 junit
-plexus-component-api-1.0.33
+plexus-component-api-1.0_alpha33
 "
 #plexus-classworlds-1.2_alpha10
