@@ -1,5 +1,10 @@
 
 
+  21 Oct 2007; kiorky <kiorky@cryptelium.net>
+  plexus-container-default-1.0_alpha24.ebuild,
+  plexus-container-default-1.0_alpha33_pre20071021.ebuild:
+  fix DEPENDS
+
   21 Oct 2007; kiorky <kiorky@cryptelium.net> ++:
   -m bumped but i keep last version to be sure, waiting for the whole beast to
   be recompiled one time entirely
